# PSW

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
catu/: CMakeLists.txt
catu/include/: material.hpp
catu/include/gcode/: codes.hpp
catu/include/math/: vec.hpp
catu/include/milling/: path.hpp
catu/include/models/: milling_manager.hpp  path_manager.hpp  path_render.hpp  tool_manager.hpp
catu/include/tools/: mill.hpp
catu/qrc/: DoubleSpinBox.qml  main.qml  main.qrc
catu/src/: main.cpp  material.cpp  material.hpp
catu/src/gcode/: codes.cpp
catu/src/math/: vec.cpp
catu/src/milling/: path.cpp
catu/src/models/: milling_manager.cpp  path_manager.cpp  path_manager.hpp  path_render.cpp  tool_manager.cpp  tool_manager.hpp
catu/src/tools/: mill.cpp
cmake/Modules/: FindMuParser.cmake
geru/: CMakeLists.txt
geru/qrc/: BezierCubeEffect.qml  BezierCubeMaterial.qml  SimulationProperties.qml  main.qml  main.qrc
geru/qrc/controls/: DoubleTextField.qml  SectionPlate.qml
geru/qrc/shaders/: robustwireframe.frag  robustwireframe.geom  robustwireframe.vert
geru/src/: BezierFrameGeometry.cpp  BezierFrameGeometry.hpp  CubeWalls.cpp  CubeWalls.hpp  CuboidWireframeGeometry.cpp  CuboidWireframeGeometry.hpp  ParticleModel.cpp  ParticleModel.hpp  QmlRaycast.cpp  main.cpp  simulation.cpp  simulation.hpp
haru/: CMakeLists.txt
haru/qrc/: main.qml  main.qrc
haru/src/: main.cpp  material.hpp  math.cpp  math.hpp  simulation.cpp  simulation.hpp
hodo/: CMakeLists.txt
hodo/qrc/: main.qml
hodo/src/: main.cpp  simulation.cpp  simulation.hpp
hokan/: CMakeLists.txt
hokan/qrc/: DoubleTextField.qml  Frame.qml  PositionInput.qml  main.qml  main.qrc
hokan/src/: QQuaternionUtils.cpp  main.cpp  simulation.cpp  simulation.hpp
kata/: CMakeLists.txt
kata/qrc/: Arm.qml  SceneSettings.qml  SimulationControl.qml  main.qml  main.qrc
kata/qrc/controls/: ScrollableSectionPlate.qml  SectionPlate.qml
kata/src/: CSpaceImageProvider.cpp  CSpaceImageProvider.hpp  ConfigurationSpace.cpp  ConfigurationSpace.hpp  main.cpp  simulation.cpp  simulation.hpp
keiro/: Cargo.toml  main.rs
keiro/res/: model.xml  model2.xml  model3.xml  modelP.xml
keiro/src/: main.rs
nigari/: .ninja_deps  .ninja_log  CMakeLists.txt
nigari/qrc/: Vector.qml  main.qml  main.qrc
nigari/src/: main.cpp  simulation.cpp  simulation.hpp  trace.cpp  trace.hpp
paths/: r1.k16  r2.f12
puma/: CMakeLists.txt
puma/qrc/: DoubleTextField.qml  Frame.qml  PositionInput.qml  Puma.qml  QuaternionInput.qml  main.qml  main.qrc
puma/src/: QQuaternionUtils.hpp  simulation.cpp  simulation.hpp
(+50 files in other folders)
